--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@ course_first_var.txt
 course_second_var.txt
 course_third_var.txt
 requests.txt
+have.txt
+need.txt
+list_work.txt
+task6.css
+future_list_work.txt
+index1.html
+
